--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@ng-bootstrap/ng-bootstrap": "^9.0.0",
     "@rxweb/reactive-form-validators": "^2.1.2",
     "@stomp/stompjs": "^6.0.0",
+    "@types/crypto-js": "^4.0.1",
     "@types/sockjs": "^0.3.32",
     "@types/sockjs-client": "^1.5.0",
     "@types/stompjs": "^2.3.4",
     "bootstrap": "^4.5.3",
+    "crypto-js": "^4.0.0",
     "net": "^1.0.2",
     "rxjs": "~6.6.0",
     "sockjs-client": "^1.5.0",
